[project]
name = "tutba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.7",
    "hyperopt>=0.2.7",
    "ipykernel>=6.29.5",
    "ipython>=8.32.0",
    "ipywidgets>=8.1.5",
    "notebook>=7.3.2",
    "numba>=0.61.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]
